--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "^4.2.0",
     "eosjs": "^20.0.0-beta3",
     "folder-hash": "^2.1.2",
+    "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "mocha-steps": "^1.1.0",
     "node-fetch": "^2.3.0",
